fix: change gap

--- a/src/components/ActionsPanel/ActionsPanel.scss
+++ b/src/components/ActionsPanel/ActionsPanel.scss
@@ -12,6 +12,7 @@
 
     &__note-wrapper {
         min-width: 100px;
+        margin-right: 4px;
     }
 
     &__button-close-wrapper {
